# advent-of-code-2022

python/: pyproject.toml
python/aoc/: main.py  read_input_common.py
python/aoc/day1/: day1.py
python/aoc/day2/: day2.py
python/aoc/day3/: day3.py
python/aoc/day4/: day4.py
python/aoc/day5/: day5.py
python/aoc/day6/: day6.py
python/aoc/day7/: day7.py
python/aoc/day8/: day8.py
