[tool.poetry]
name = "aoc"
version = "0.1.0"
description = ""
authors = ["Evan Richards <tevanrichards@gmail.com>"]
readme = "README.md"
packages = [{include = "advent_of_code_2022"}]

[tool.poetry.dependencies]
python = "^3.10"
black = "^22.10.0"
click = "^8.1.3"
pyperclip = "^1.8.2"
colorama = "^0.4.6"
isort = "^5.10.1"

[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
